# bandw

./: .gitignore  .gitleaksignore  .gitmodules  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  ROADMAP.md  docker-compose.yml  go.mod  go.sum  justfile  prek.toml  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
cmd/server/: main.go
docs/: EXECUTION_PLAN.md  OBJECTIVE_CONTEXT.md  QUESTION_LIST.md  STRUCTURE_OUTLINE.md  custom-spec.md  experiment-tracker-data-model-comparison.md  feature-ranking.md  frontend-spec.md  graphql-schema.graphql  openapi-spec.yaml  system-spec.md
docs/plans/: mvp-ui-execution-plan.md  mvp-ui-projects-runs.md
docs/plans/ui-tests/: 00-architecture.md  INDEX.md
docs/prompts/: mvp-ui-projects-runs.md
docs/specs/: AGENT.md  artifact-endpoints.md
frontend/: package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
frontend/src/lib/: graphql.ts
frontend/src/lib/components/: Breadcrumb.svelte  LineChart.svelte  ProjectNav.svelte  StateBadge.svelte
frontend/src/lib/graphql/: client.ts  queries.ts
frontend/src/lib/utils/: colors.ts  time.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/[entity]/[project]/: +layout.svelte
frontend/src/routes/[entity]/projects/: +page.svelte
internal/authctx/: authctx.go
internal/config/: config.go  config_test.go
internal/filestream/: handler.go  handler_test.go
internal/graphql/: artifact_mutations.go  artifact_query_test.go  artifact_resolvers.go  artifact_test.go  handler.go  helpers.go  mutation.go  project_resolver.go  projects_list_test.go  relay.go  resolver.go  run_history_test.go  run_lifecycle_test.go  run_resolver.go  run_resolvers.go  run_test.go  scalars.go  schema.go  server_info.go  upsert_bucket.go  viewer.go  viewer_test.go
internal/server/: auth.go  auth_test.go  server.go  server_test.go
internal/storage/: local.go
internal/store/: artifact.go  artifact_migrate_test.go  db.go  db_test.go  history.go  log.go  models.go  models_test.go  project.go  run.go  run_history_test.go  seed.go  user.go
internal/testutil/: harness.go
tests/playwright/: ARCHITECTURE.md
tests/playwright/tests/app/cascade-settings/: SPEC.md
tests/playwright/tests/app/custom-charts/: SPEC.md
tests/playwright/tests/app/keyboard-shortcuts/: SPEC.md
tests/playwright/tests/artifacts/advanced/: SPEC.md
tests/playwright/tests/artifacts/core/: SPEC.md
tests/playwright/tests/reports/advanced/: SPEC.md
tests/playwright/tests/reports/core/: SPEC.md
tests/playwright/tests/runs/compare/: SPEC.md
tests/playwright/tests/runs/display/: SPEC.md
tests/playwright/tests/runs/filter/: SPEC.md
tests/playwright/tests/runs/management/: SPEC.md
tests/playwright/tests/runs/view/: SPEC.md
tests/playwright/tests/tables/advanced/: SPEC.md
tests/playwright/tests/tables/core/: SPEC.md
tests/playwright/tests/track/config/: SPEC.md
tests/sdk/: README.md  pyproject.toml  smoke_test.py
tests/smoke/: probe_pytorch.py  probe_sklearn.py  test_artifacts_e2e.py  test_graphql.py  test_init.py  test_sdk_e2e.py
tests/wandb-conformance/: conftest_bandw.py  ignore-files.txt  pyproject.toml  quick-tests.txt  run.sh
(+19 files in other folders)
