[project]
name = "economic-parka"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.33.1",
    "wandb>=0.26.0",
]

# prek is a dev dependency so `uv run prek install` works without a global install.
# This keeps the hook toolchain pinned and reproducible across the team.
[dependency-groups]
dev = [
    "prek>=0.3.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = ["vendor-sdks", "wandb-sdk"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (unused imports, undefined names)
    "I",   # isort (import ordering)
    "S",   # bandit (security: subprocess injection, assert in prod, etc.)
    "B",   # bugbear (common pitfalls: mutable default args, except Exception, etc.)
    "UP",  # pyupgrade (use modern Python syntax — f-strings, type unions, etc.)
]

[tool.ruff.lint.per-file-ignores]
# S101: allow `assert` in tests — bandit flags it because assert is stripped
# in optimized bytecode, but test code is never run with -O.
"tests/**" = ["S101"]
