[project]
name = "economic-parka"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "wandb>=0.26.0",
]

# prek is a dev dependency so `uv run prek install` works without a global install.
# This keeps the hook toolchain pinned and reproducible across the team.
[dependency-groups]
dev = [
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "numpy>=2.4.4",
    "pillow>=12.2.0",
    "prek>=0.3.0",
    "pyte>=0.8.2",
    "pytest>=9.0.3",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
    "uvicorn>=0.44.0",
]
